--- a/Keddit/app/src/main/res/layout/news_item_loading.xml
+++ b/Keddit/app/src/main/res/layout/news_item_loading.xml
@@ -7,7 +7,8 @@
 
     <ProgressBar
         android:id="@+id/progress"
-        android:layout_margin="10dp"
         android:layout_width="40dp"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:layout_margin="10dp" />
+
 </LinearLayout>
