--- a/Keddit/app/src/main/res/layout/news_item.xml
+++ b/Keddit/app/src/main/res/layout/news_item.xml
@@ -59,4 +59,10 @@
         tools:ignore="SmallSp"
         tools:text="12 hours ago" />
 
+    <TextView
+        android:id="@+id/url"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
 </RelativeLayout>
