--- a/AndroidAppArchitecture/LoaderWeather/app/src/main/res/layout-land/weather_card.xml
+++ b/AndroidAppArchitecture/LoaderWeather/app/src/main/res/layout-land/weather_card.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/weather_card_padding"
-    android:layout_marginRight="@dimen/weather_card_padding"
     android:layout_marginTop="@dimen/weather_card_margin_top"
+    android:layout_marginRight="@dimen/weather_card_padding"
     app:cardCornerRadius="@dimen/card_radius"
     app:contentPadding="@dimen/padding_medium"
     app:elevation="@dimen/card_elevation">
@@ -27,7 +27,7 @@
             android:layout_gravity="center_horizontal"
             android:fontFamily="sans-serif"
             android:gravity="center"
-            android:textSize="@dimen/text.22"/>
+            android:textSize="@dimen/text.22" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/temperature"
                     android:drawablePadding="@dimen/padding_small"
-                    android:text="@string/temperature"/>
+                    android:text="@string/temperature" />
 
                 <TextView
                     android:id="@+id/temperature"
@@ -56,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true" />
 
             </RelativeLayout>
 
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/pressure"
                     android:drawablePadding="@dimen/padding_small"
-                    android:text="@string/pressure"/>
+                    android:text="@string/pressure" />
 
                 <TextView
                     android:id="@+id/pressure"
@@ -81,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_gravity="right|center_vertical"/>
+                    android:layout_gravity="right|center_vertical" />
 
             </RelativeLayout>
 
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/humidity"
                     android:drawablePadding="@dimen/padding_small"
-                    android:text="@string/humidity"/>
+                    android:text="@string/humidity" />
 
                 <TextView
                     android:id="@+id/humidity"
@@ -113,7 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true" />
 
             </RelativeLayout>
 
@@ -129,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/wind_speed"
                     android:drawablePadding="@dimen/padding_small"
-                    android:text="@string/wind_speed"/>
+                    android:text="@string/wind_speed" />
 
                 <TextView
                     android:id="@+id/wind_speed"
@@ -137,7 +137,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true" />
 
             </RelativeLayout>
 
@@ -155,6 +155,6 @@
         android:text="@string/weather_error"
         android:textColor="@color/gray_880b1f35"
         android:textSize="@dimen/text.18"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
