--- a/AndroidAppArchitecture/LoaderWeather/app/src/main/res/layout/activity_weather.xml
+++ b/AndroidAppArchitecture/LoaderWeather/app/src/main/res/layout/activity_weather.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".screen.weather.WeatherActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_size"
@@ -17,12 +17,12 @@
 
         <TextView
             android:id="@+id/toolbar_title"
+            style="@style/ToolbarTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/ToolbarTitle"/>
+            android:layout_height="wrap_content" />
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
-    <include layout="@layout/weather_card"/>
+    <include layout="@layout/weather_card" />
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
