--- a/MvpExamples/ExampleTwo/app/src/main/res/layout/user_item.xml
+++ b/MvpExamples/ExampleTwo/app/src/main/res/layout/user_item.xml
@@ -5,10 +5,10 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/txt_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
